
2007-12-09  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5693: options.additionalPreviewLanguages is showing wrong records for table pages (tanks to Helmut Hummel)

2008-02-16  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #5303: t3skin - pilup.gif not the same style as pildown.gif
	* Fixed bug #7454: Category Treeview in BE-Forms has gap between 2 lines (Thanks to Stefan Geith)

2008-02-04  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #7029: tslib_cObj uses deprecated function call_user_method
	* Fixed bug #7371: Query generator does not accept dates in where condition

2008-01-31  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #6902: Add an imagespace to Text w/ Image when image width is not available. Thanks to Georg Ringer.

2008-01-27  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: Overriding TCA properties with TSconfig does not work with array

2008-01-15  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7148: CSV Export Output in List Module

2008-01-15  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #7126: IRRE - Child records are shown floated and not as blocks in Safari

2008-01-10  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #5421: Problem ignoring extension constraints

2008-01-08  Benjamin Mack  <mack@xnos.org>

	* Followup for bug #1678: limit to language; made the variable names better (Thanks to Helmut Hummel)

2008-01-06  Oliver Hader  <oh@inpublica.de>

	* Post-cleanup of bug #5994: IRRE - RTEhtmlarea is not show in child records if parent has no RTE

2007-12-26  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #6651: IRRE - Button for creating new records disappeared on nested child records if a parent record reached the maxitems value

2007-12-21  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #6007: IRRE - Child records with image fields are not shown in m:n disposal

2007-12-17  Ingmar Schlecht  <ingmar@typo3.org>
