@@ -1,3 +1,6 @@
+2007-12-22  Ingmar Schlecht  <ingmar@typo3.org>
+
+	* Fixed bug #7158: DBAL fixes to Indexed Search backend module (Thanks to Moreno Feltscher)
 
 2007-12-09  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
